--- a/src/assets/jss/App.css
+++ b/src/assets/jss/App.css
@@ -1,4 +1,20 @@
 .App {
-    margin: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.logo {
+  min-width: 100px;
+  max-width: 200px;
+  height: auto;
+}
+
+.waiting-text {
+  text-align: center;
+}
