--- a/src/assets/jss/GamerCard.css
+++ b/src/assets/jss/GamerCard.css
@@ -1,46 +1,41 @@
 .GamerCard {
   display: flex;
   flex-direction: column;
+  min-width: 300px;
   max-width: 500px;
+  min-height: 300px;
+  padding: 20px;
   margin: 20px;
-  box-shadow: inset 0 0 5px black;
+  background-color:  rgb(48, 47, 47);
+  box-shadow: 0 0 10px rgb(83, 250, 236);
+  color: rgb(83, 250, 236);
 }
 
-.card-header {
+.gamer-shield {
   display: flex;
-  justify-content: start;
-  align-items: center;
-  padding: 20px 20px;
-}
-
-.card-photo {
-  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
-  box-shadow: inset 0 0 5px black;
 }
 
-.card-infos {
+.gamer-photo {
   display: flex;
-  flex-direction: column;
-  margin-left: 20px;
-}
-
-.card-left-content {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  width: 200px;
-  padding: 10px;
+  align-items: center;
+  width: 150px;
+  height: 150px;
+  min-width: 150px;
+  min-height: 150px;
+  margin: 20px;
+  box-shadow: inset 0 0 5px rgb(83, 250, 236);
 }
 
-.card-main-content {
+.gamer-description {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  text-align: justify;
+  padding: 20px;
 }
+
+
 
