--- a/src/assets/jss/App.css
+++ b/src/assets/jss/App.css
@@ -1,20 +1,34 @@
+/* ******** GLOBAL CSS ******** */
+* {margin: 0;padding: 0;box-sizing: border-box;}
+
+body {
+  background-color: rgb(48, 47, 47);
+}
+
 .App {
   display: flex;
+  overflow: hidden;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
-
-}
-
-.logo {
-  min-width: 100px;
-  max-width: 200px;
   height: auto;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.waiting-text {
-  text-align: center;
+h1.main-title{
+  margin: 50px 0;
+  color: #cccccc;
+}
+
+
+/* ******** GAMERS ******** */
+
+.gamers-list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 20px;
 }
