--- a/src/assets/jss/App.css
+++ b/src/assets/jss/App.css
@@ -21,14 +21,13 @@ h1.main-title{
   color: #cccccc;
 }
 
-
 /* ******** GAMERS ******** */
 
-.gamers-list {
+/* .gamers-list {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
   margin-top: 20px;
-}
+} */
