--- a/src/assets/jss/App.css
+++ b/src/assets/jss/App.css
@@ -6,19 +6,40 @@ body {
 }
 
 .App {
-  display: flex;
+  /* display: flex;
   overflow: hidden;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: auto;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif; */
+  text-align: center;
 }
 
-h1.main-title{
+
+
+/* h1.main-title{
   margin: 50px 0;
   color: #cccccc;
+} */
+
+/* ******** MENU ******** */
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  color: white;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 40%;
+  list-style: none;
 }
 
 /* ******** GAMERS ******** */
