--- a/src/assets/jss/App.css
+++ b/src/assets/jss/App.css
@@ -1,18 +1,56 @@
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   width: 100vw;
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
+}
+.Header{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+.Icons{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: flex-end;
+  height: 20px;
+}
+.Icons img{
+  width: 20px;
+  margin: 10px;
+}
+.Menu{
+  display: flex;
+  flex-direction: row;
+  height:200px;
+  width: 100%;
+  align-items: center;
+  background-color: #3a98d9;
+}
+                                    .Menu a{
+  padding: 3px;
+  border-right: solid #2F2F2F;
+}
+.Menu a:hover{
+  color: #d73983;
+  cursor: pointer;
+
 
 }
-
+.LogoContain{
+  display: flex;
+  width: 100%;
+}
 .logo {
+  align-self: flex-start;
+  height: 100px;
   min-width: 100px;
   max-width: 200px;
-  height: auto;
 }
 
 .waiting-text {
