--- a/src/assets/jss/GamerCard.css
+++ b/src/assets/jss/GamerCard.css
@@ -11,14 +11,14 @@
   color: rgb(83, 250, 236);
 }
 
-.gamer-shield {
+.Gamer-shield {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.gamer-photo {
+.Gamer-photo {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,7 +30,7 @@
   box-shadow: inset 0 0 5px rgb(83, 250, 236);
 }
 
-.gamer-description {
+.Gamer-description {
   display: flex;
   flex-direction: column;
   text-align: justify;
