--- a/src/assets/jss/GamerCard.css
+++ b/src/assets/jss/GamerCard.css
@@ -1,12 +1,13 @@
 .GamerCard {
   display: flex;
   flex-direction: column;
+  align-content: flex-end;
   min-width: 300px;
   max-width: 500px;
   min-height: 300px;
   padding: 20px;
   margin: 20px;
-  background-color:  rgb(48, 47, 47);
+  /* background-color:  rgb(48, 47, 47); */
   box-shadow: 0 0 10px rgb(83, 250, 236);
   color: rgb(83, 250, 236);
 }
@@ -26,8 +27,9 @@
   height: 150px;
   min-width: 150px;
   min-height: 150px;
-  margin: 20px;
-  box-shadow: inset 0 0 5px rgb(83, 250, 236);
+  margin-bottom: 20px;
+  margin-bottom: 50px;
+  /* box-shadow: inset 0 0 5px rgb(83, 250, 236); */
 }
 
 .Gamer-description {
@@ -36,6 +38,7 @@
   text-align: justify;
   padding: 20px;
 }
-
-
-
+.Gamer-pseudo{
+  font-weight: bold;
+  font-size: 20px;
+}
