--- a/src/assets/jss/App.css
+++ b/src/assets/jss/App.css
@@ -3,7 +3,7 @@
 
 html, body {
   height: 100vh;
-  background-color: rgb(29, 29, 29);
+  background-color: black;
 }
 
 .App {
@@ -11,14 +11,15 @@ html, body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
 }
 
 h1{
-  margin: 50px 0;
-  color: #cccccc;
+  margin: 10px 0;
+  color: rgb(83, 250, 236);
   text-align: center;
 }
 
@@ -41,6 +42,38 @@ h1{
   align-items: center;
 }
 
+/* ******** HEADER ******** */
+.Header {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100vw;
+  height: 30vh;
+  background-image: url(../img/fond.jpg);
+  background-size: 100%;
+}
+
+/* ******** LOGO ******** */
+
+.Logo-contain {
+  z-index:1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Logo {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  min-width: 200px;
+  max-width: 300px;
+  height: auto;  
+}
+
 /* ******** MENU ******** */
 
 nav {
@@ -50,55 +83,35 @@ nav {
   flex-wrap: wrap;
   width: 100vw;
   min-height: 20vh;
-  /* height: 600px; */
-  padding-bottom: 20px;
-  background-image: url(../img/fond.jpg);
-  background-size: 100% auto;  
-}
-
-.Logo-contain {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 20px;
-  padding: 20px;
-}
-
-.Logo {
-
-  /* align-content: center; */
-  min-width: 100px;
-  max-width: 200px;
-  height: auto;
-  background-color: white;
-  border-radius: 50%;
-  
 }
 
 .Nav-links {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  min-width: 100px;
-  max-width: 500px;
-  /* margin-left: 20vw; */
-  
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 100%;
+  background-color: #52052981;
 }
 
-.Nav-links a {
-  margin: 0 20px;
+.Nav-link {
+  margin: 0 30px;
   list-style: none;
   text-decoration: none;
   font-weight: 600; 
   font-size: 24px;
+  color: #3a98d9;
 }
 
-.Nav-links li {
+.Nav-link--active {
   color: rgb(83, 250, 236);
 }
 
+.Nav-link:hover {
+  color: #d73983;
+}
+
 .Nav-links li:hover{
-  color: #e91678;
   cursor: pointer;
 }
 
@@ -110,14 +123,28 @@ nav {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  min-height: 500px;
-  padding: 20px 0;
+  width: 60%;
+  padding: 50px 50px;
 }
 
 .Twitch {
-  border-top: solid 1px  rgb(83, 250, 236);
-  border-left: solid 1px  rgb(83, 250, 236);
-  box-shadow: 5px 5px 5px #e91678;
+  height: 0;
+  width: 100%;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  margin: 0px;
+  box-shadow: 5px 5px 20px #d73983, -2px -2px 20px  #3a98d9;
+}
+
+.Twitch iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  float: left;
 }
 
 /* ******** GAMERS ******** */
@@ -141,14 +168,8 @@ nav {
   width: 100%;
   height: 60px;
   margin-top: 20px;
-  /* padding-top: 20px; */
   background-color: black;
 }
-
-/* .Footer, .Push {
-  height: 60px;
-  clear: both; .push must be the same height as .footer 
-} */
 
 .Icons {
   bottom: 0;
@@ -161,3 +182,24 @@ nav {
   height: auto;
   margin: 10px;
 }  
+
+/* ******** MEDIA QUERIES ******** */
+
+@media (max-width:960px) {
+  .Logo-contain {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .Logo {
+    min-width: 200px;
+    max-width: 300px;
+    height: auto;  
+  }  
+  
+  .Home {
+    width: 90%;
+    padding: 20px 0;
+  }
+}
