--- a/src/assets/jss/GamerCard.css
+++ b/src/assets/jss/GamerCard.css
@@ -11,6 +11,7 @@
   /* box-shadow: 0 0 10px rgb(83, 250, 236); */
   color: rgb(83, 250, 236);
   cursor: pointer;
+  transition: 2.5s;
 }
 
 .Gamer-shield {
