--- a/src/assets/jss/App.css
+++ b/src/assets/jss/App.css
@@ -137,19 +137,19 @@ nav {
   width: 100%;
   padding-bottom: 56.25%;
   overflow: hidden;
-  position: relative;
   display: inline-block;
   margin: 0px;
   box-shadow: 5px 5px 20px #d73983, -2px -2px 20px  #3a98d9;
 }
 
-.Twitch iframe {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  float: left;
+.Player-embed {
+  
+}
+
+#twitch-embed {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* ******** GAMERS ******** */
