--- a/src/assets/jss/App.css
+++ b/src/assets/jss/App.css
@@ -52,7 +52,7 @@ h1{
   justify-content: center;
   align-items: flex-end;
   width: 100vw;
-  height: 30vh;
+  height: 10vh;
   background-image: url(../img/fond.jpg);
   background-size: 100%;
 }
@@ -71,11 +71,13 @@ h1{
 
 .Logo {
   position: absolute;
+  /* top negative waiting for good sized logo */
   top: -100px;
   left: 0;
   min-width: 200px;
   max-width: 300px;
-  height: auto;  
+  height: auto;
+  transition: 0.25s;
 }
 
 /* ******** MENU ******** */
@@ -128,12 +130,12 @@ nav {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  width: 60%;
+  width: 80%;
   padding: 50px 50px;
 }
 
 .Twitch {
-  height: 0;
+  position: relative;
   width: 100%;
   padding-bottom: 56.25%;
   overflow: hidden;
@@ -142,14 +144,11 @@ nav {
   box-shadow: 5px 5px 20px #d73983, -2px -2px 20px  #3a98d9;
 }
 
-.Player-embed {
-  
-}
-
 #twitch-embed {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
 }
 
 /* ******** GAMERS ******** */
@@ -190,7 +189,7 @@ nav {
 
 /* ******** MEDIA QUERIES ******** */
 
-@media (max-width:960px) {
+@media (max-width:800px) {
   .Logo-contain {
     display: flex;
     justify-content: center;
@@ -198,13 +197,20 @@ nav {
   }
   
   .Logo {
-    min-width: 200px;
-    max-width: 300px;
+    /* top negative waiting for good sized logo */
+    top: -70px;
+    min-width: 100px;
+    max-width: 150px;
     height: auto;  
   }  
   
   .Home {
     width: 90%;
     padding: 20px 0;
+  }
+
+  .Twitch {
+    min-height: 720px;
+    padding-top: 0;
   }
 }
